# test_hammer_systems

./: .env.example  .pre-commit-config.yaml  API.postman_collection.json  Dockerfile  README.md  docker-compose.db.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
project/app/: admin.py  apps.py  context_processors.py  models.py  redis.py  signals.py  urls.py  utils.py  validators.py  views.py
project/app/api/: serializers.py  urls.py  views.py
project/app/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name_and_more.py  0003_activatedcode.py
project/core/: asgi.py  settings.py  urls.py  wsgi.py
project/static/: styles.css
project/static/css/: styles.css
project/static/js/: activate_code.js  auth_code.js  authorization.js  config.js  inviters.js  user.js  utils.js
project/templates/: base.html
project/templates/includes/: footer.html  header.html
project/templates/pages/: login.html  profile.html
