[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# include = ["bot"]

[project]
name = "hammer_systems"
version = "0.1.0"
description = "Тестоввое задание для компании Hammer Systems."
requires-python = ">=3.13"
dependencies = [
    "djangorestframework>=3.16.0",
    "python-dotenv>=1.1.1",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
]

[project.optional-dependencies]
dev = ["isort", "flake8", "pre-commit", "pipdeptree"]

[tool.flake8]
exclude = ["*env*/", "__pycache__"]

[tool.isort]
skip_glob = ["*env*/", "__pycache__"]
